--- a/basketball-stats-tracker/package.json
+++ b/basketball-stats-tracker/package.json
@@ -13,9 +13,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "@mui/x-date-pickers": "^6.17.0",
+    "dayjs": "^1.11.10",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
