--- a/basketball-stats-tracker/package.json
+++ b/basketball-stats-tracker/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@mui/x-date-pickers": "^6.17.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.5.2",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
